Fixed layout on iPhone SE for those who have one in 2020

--- a/assets/nibbles.css
+++ b/assets/nibbles.css
@@ -31,7 +31,7 @@
 }
 
 #nibblesKeyboard {
-  margin: 1em auto;
+  margin: 0 auto;
   width: 27ch;
   color: #FF5;
   font-family: DOS;
